--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
       <div class="header">
         <h1>Listagem de Escolas</h1>
       </div>
+      <div class="search">
+        <div class="pesquisar">
+          <input type="text" id="valor-pesquisa" data-index="new" name="pesquisa" class="pesquisar-form" placeholder="Search...">
+          <button id="btn-pesquisar" class="pesquisa-linha"><i class="bi bi-search"></i></button>
+        </div>
+      </div>
       <table id="tableEscola" class="records">
         <thead>
           <tr>
@@ -116,6 +122,11 @@
         <tbody>
         </tbody>
       </table>
+      <div class="paginacao">
+        <p class="localizacao-pag">Mostrando 1 até 10 de 52</p>
+        <button class="volta-pag"><i class="bi bi-arrow-left"></i></button>
+        <button class="proxima-pag"><i class="bi bi-arrow-right"></i></button>
+      </div>
     </section>
   </main>
 
