Get de permissão e usuario feitos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
           <div class="form-item">
             <label for="estado">Estado<span>*</span></label>
-            <select id="estado" name="estado" class="formulario-field">
+            <select id="estado" name="estado" class="formulario-field"required>
               <option value="">Escolha um estado...</option>
               <option value="AC">Acre</option>
               <option value="AL">Alagoas</option>
@@ -123,7 +123,7 @@
         </tbody>
       </table>
       <div class="paginacao">
-        <p class="localizacao-pag">Mostrando 1 até 10 de 52</p>
+        <p class="localizacao-pag"></p>
         <button class="volta-pag"><i class="bi bi-arrow-left"></i></button>
         <button class="proxima-pag"><i class="bi bi-arrow-right"></i></button>
       </div>
