--- a/permissao.html
+++ b/permissao.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css">
 
-  <title>Escola</title>
+  <title>Permissão</title>
 </head>
 
 <body>
@@ -46,44 +46,44 @@
   <main>
     <section class="formulario" id="formulario">
       <div class="formulario-content">
-        <form class="formulario-form form">
-          <div class="form-header">
+        <form id="form" class="formulario-form form">
+          <div class="header">
             <h1>Cadastro de Permissão</h1>
           </div>
           <div class="form-item">
-            <label for="data-inicio">Data de Início<span>*</span></label>
-            <input type="date" id="data-inicio" name="data-inicio" class="formulario-field" required>
+            <label for="dataInicio">Data de Início<span>*</span></label>
+            <input type="date" id="dataInicio" data-index="new" name="dataInicio" class="formulario-field" required>
           </div>
           <div class="form-item">
             <label for="ano">Ano<span>*</span></label>
-            <input type="number" id="ano" name="ano" class="formulario-field" min="1900" max="2100">
+            <input type="number" id="ano" name="ano" class="formulario-field" min="1900" max="2100" required>
           </div>
           <div class="form-item">
             <label for="serie">Série<span>*</span></label>
-            <select id="serie" name="serie" class="formulario-field">
+            <select id="serie" name="serie" class="formulario-field" required>
               <option value="">Escolha uma série...</option>
-              <option value="1ª Ano">1ª Ano</option>
-              <option value="2ª Ano">2ª Ano</option>
-              <option value="3ª Ano">3ª Ano</option>
-              <option value="Pré-Vestibular">Pré-Vestibular</option>
+              <option value="ANO1">1ª Ano</option>
+              <option value="ANO2">2ª Ano</option>
+              <option value="ANO3">3ª Ano</option>
+              <option value="PRE_VESTIBULAR">Pré-Vestibular</option>
             </select>
           </div>
           <div class="form-item">
-            <label for="duracao-permissao">Duração da Permissão<span>*</span></label>
-            <select id="duracao-permissao" name="duracao-permissao" class="formulario-field">
+            <label for="duracaoPermissao">Duração da Permissão<span>*</span></label>
+            <select id="duracaoPermissao" name="duracaoPermissao" class="formulario-field" required>
               <option value="">Escolha uma duração de permissão...</option>
-              <option value="01 Mês">01 Mês</option>
-              <option value="03 Meses">03 Meses</option>
-              <option value="06 Meses">06 Meses</option>
-              <option value="09 Meses">09 Meses</option>
-              <option value="12 Meses">12 Meses</option>
+              <option value="UM_MES">01 Mês</option>
+              <option value="TRES_MESES">03 Meses</option>
+              <option value="SEIS_MESES">06 Meses</option>
+              <option value="NOVE_MESES">09 Meses</option>
+              <option value="DOZE_MESES">12 Meses</option>
             </select>
           </div>
           <div class="form-item">
             <label for="escola">Escola<span>*</span></label>
-            <select id="escola" name="escola" class="formulario-field">
+            <select id="escola" name="escola" class="formulario-field" required>
               <option value="">Escolha uma escola...</option>
-              <option value="aprovazz">Aprovazz</option>
+              <option value="Colégio Cetecon">Colégio Cetecon</option>
               <option value="bdm">Colégio BDM</option>
               <option value="marista">Marista</option>
               <option value="ideal">Ideal</option>
@@ -91,55 +91,42 @@
           </div>
         </form>
         <footer class="formulario-footer">
-          <button class="button green">Salvar</button>
-          <button class="button blue">Cancelar</button>
+          <button id="salvar" class="button blue">Gravar</button>
+          <button id="cancelar" class="button white">Limpar</button>
         </footer>
       </div>
     </section>
     <section class="table">
-      <table class="records">
+      <div class="header">
+        <h1>Listagem de Usuários</h1>
+      </div>
+      <div class="search">
+        <div class="pesquisar">
+          <input type="text" id="valor-pesquisa" data-index="new" name="pesquisa" class="pesquisar-form" placeholder="Search...">
+          <button id="btn-pesquisar" class="pesquisa-linha"><i class="bi bi-search"></i></button>
+        </div>
+      </div>
+      <table id="tablePermissao" class="records">
         <thead>
           <tr>
-            <th>Nome</th>
-            <th>E-mail</th>
-            <th>Celular</th>
-            <th>Cidade</th>
+            <th>#</th>
+            <th>Código</th>
+            <th>Escola</th>
+            <th>Data de Início</th>
+            <th>Data de Validade</th>
+            <th>Período</th>
+            <th>Duração</th>
             <th>Ação</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Maria</td>
-            <td>maria@gmail.com</td>
-            <td>(11) 97165-1111</td>
-            <td>Anapolis</td>
-            <td>
-              <button type="button" class="button green">editar</button>
-              <button type="button" class="button red">excluir</button>
-            </td>
-          </tr>
-          <tr>
-            <td>João Pedro</td>
-            <td>joao@gmail.com</td>
-            <td>(11) 97165-2222</td>
-            <td>Jandira</td>
-            <td>
-              <button type="button" class="button green">editar</button>
-              <button type="button" class="button red">excluir</button>
-            </td>
-          </tr>
-          <tr>
-            <td>Jose da Silva</td>
-            <td>jose@gmail.com</td>
-            <td>(11) 97165-3333</td>
-            <td>São Roque</td>
-            <td>
-              <button type="button" class="button green">editar</button>
-              <button type="button" class="button red">excluir</button>
-            </td>
-          </tr>
         </tbody>
       </table>
+      <div class="paginacao">
+        <p class="localizacao-pag"></p>
+        <button class="volta-pag"><i class="bi bi-arrow-left"></i></button>
+        <button class="proxima-pag"><i class="bi bi-arrow-right"></i></button>
+      </div>
     </section>
   </main>
 
