--- a/usuario.html
+++ b/usuario.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css">
 
-  <title>Escola</title>
+  <title>Usuário</title>
 </head>
 
 <body>
@@ -47,79 +47,62 @@
   <main>
     <section class="formulario" id="formulario">
       <div class="formulario-content">
-        <form class="formulario-form form">
-          <div class="form-header">
+        <form id="form" class="formulario-form form">
+          <div class="header">
             <h1>Cadastro de Usuário</h1>
           </div>
           <div class="form-item">
             <label for="nome-usuario">Nome<span>*</span></label>
-            <input type="text" id="nome-usuario" name="nome-usuario" class="formulario-field" required>
+            <input type="text" id="nome" data-index="new" name="nome-usuario" class="formulario-field" required>
           </div>
           <div class="form-item">
             <label for="email">Email<span>*</span></label>
-            <input type="email" id="email" name="email" class="formulario-field">
+            <input type="email" id="email" name="email" class="formulario-field" required>
           </div>
           <div class="form-item">
             <label for="perfil">Perfil<span>*</span></label>
-            <select id="perfil" name="perfil" class="formulario-field">
+            <select id="perfil" name="perfil" class="formulario-field" required>
               <option value="">Escolha um perfil...</option>
-              <option value="administrador">Administrador</option>
-              <option value="gestor">Gestor de Escola</option>
-              <option value="digitador">Digitador</option>
+              <option value="ADMINISTRADOR">Administrador</option>
+              <option value="GESTOR_ESCOLA">Gestor de Escola</option>
+              <option value="DIGITADOR">Digitador</option>
             </select>
           </div>
         </form>
         <footer class="formulario-footer">
-          <button class="button green">Salvar</button>
-          <button class="button blue">Cancelar</button>
+          <button id="salvar" class="button blue">Gravar</button>
+          <button id="cancelar" class="button white">Limpar</button>
         </footer>
       </div>
     </section>
     <section class="table">
-      <!-- <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Cliente</button> -->
-      <table class="records">
+      <div class="header">
+        <h1>Listagem de Usuários</h1>
+      </div>
+      <div class="search">
+        <div class="pesquisar">
+          <input type="text" id="valor-pesquisa" data-index="new" name="pesquisa" class="pesquisar-form" placeholder="Search...">
+          <button id="btn-pesquisar" class="pesquisa-linha"><i class="bi bi-search"></i></button>
+        </div>
+      </div>
+      <table id="tableUsuario" class="records">
         <thead>
           <tr>
+            <th>#</th>
             <th>Nome</th>
-            <th>E-mail</th>
-            <th>Celular</th>
-            <th>Cidade</th>
+            <th>Email</th>
+            <th>Perfil</th>
             <th>Ação</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Maria</td>
-            <td>maria@gmail.com</td>
-            <td>(11) 97165-1111</td>
-            <td>Anapolis</td>
-            <td>
-              <button type="button" class="button green">editar</button>
-              <button type="button" class="button red">excluir</button>
-            </td>
-          </tr>
-          <tr>
-            <td>João Pedro</td>
-            <td>joao@gmail.com</td>
-            <td>(11) 97165-2222</td>
-            <td>Jandira</td>
-            <td>
-              <button type="button" class="button green">editar</button>
-              <button type="button" class="button red">excluir</button>
-            </td>
-          </tr>
-          <tr>
-            <td>Jose da Silva</td>
-            <td>jose@gmail.com</td>
-            <td>(11) 97165-3333</td>
-            <td>São Roque</td>
-            <td>
-              <button type="button" class="button green">editar</button>
-              <button type="button" class="button red">excluir</button>
-            </td>
-          </tr>
         </tbody>
       </table>
+      <div class="paginacao">
+        <p class="localizacao-pag"></p>
+        <button class="volta-pag"><i class="bi bi-arrow-left"></i></button>
+        <button class="proxima-pag"><i class="bi bi-arrow-right"></i></button>
+      </div>
     </section>
   </main>
 
